force-app/main/default/objects/Parts__c/Parts__c.object-meta.xml
<CustomObject>
    <label>Parts</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Rec #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>