force-app/main/default/objects/Parts__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <formula>Asset_Name__r.Asset_ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset ID #</label>
    <type>Text</type>
</CustomField>