force-app/main/default/objects/Parts__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset Name</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>Asset_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>