force-app/main/default/objects/Parts__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item</label>
    <referenceTo>biz3__Item__c</referenceTo>
    <relationshipName>Asset_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>