force-app/main/default/objects/Parts__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <formula>Item__r.biz3__Item_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Code</label>
    <type>Text</type>
</CustomField>