force-app/main/default/objects/Parts__c/fields/Manufacturer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Part_Number__c</fullName>
    <formula>Item__r.Maunfacturer_Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Part Number</label>
    <type>Text</type>
</CustomField>