force-app/main/default/objects/Parts__c/fields/Parts_Group__c.field-meta.xml
<CustomField>
    <fullName>Parts_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts Group</label>
    <referenceTo>Engines__c</referenceTo>
    <relationshipName>Asset_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>