force-app/main/default/objects/Parts__c/fields/Required_for_C_Service__c.field-meta.xml
<CustomField>
    <fullName>Required_for_C_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required for C Service</label>
    <type>Checkbox</type>
</CustomField>