force-app/main/default/objects/Parts__c/fields/Required_for_Kit_2__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Kit_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required for Kit (2)</label>
    <referenceTo>parts_kits__c</referenceTo>
    <relationshipLabel>Parts (Required for Kit (2))</relationshipLabel>
    <relationshipName>Parts1</relationshipName>
    <type>Lookup</type>
</CustomField>