force-app/main/default/objects/Parts__c/fields/Required_kit__c.field-meta.xml
<CustomField>
    <fullName>Required_kit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required for Kit (1)</label>
    <referenceTo>parts_kits__c</referenceTo>
    <relationshipLabel>Parts</relationshipLabel>
    <relationshipName>Parts</relationshipName>
    <type>Lookup</type>
</CustomField>